--- a/index.html
+++ b/index.html
@@ -95,24 +95,25 @@
       <div class="text-center">
         <h2>Reserve a bags court</h2>
         <p>Submit your information below to reserve a bags court for thirty minues.</p>
+        <p>(All fields are required)</p>
         <form method="post" action="reserve_bags.php">
           <label for="name">Name: </label>
-          <input type="name" id="name" name="name">
+          <input type="name" id="name" name="name" required>
 
           <br>
 
           <label for="email">Email: </label>
-          <input type="email" id="email" name="email">
+          <input type="email" id="email" name="email" required>
 
           <br>
 
           <label for="date">Date: </label>
-          <input type="date" id="date" name="date">
+          <input type="date" id="date" name="date" required>
 
           <br>
 
           <label for="time">Time: </label>
-          <input type="time" id="time" name="time">
+          <input type="time" id="time" name="time" required>
 
           <br><br>
 
@@ -135,8 +136,18 @@
 
 
     <footer class="footer bg-dark">
-      <div class="text-center dark">
-        Hello world
+      <div class="dark text-center">
+        <div class="row">
+          <div class="col">
+            Caffrey's Sports Pub
+          </div>
+          <div class="col">
+            <a href="mailto:caffreysportspub@gmail.com">caffreysportspub@gmail.com</a>
+          </div>
+          <div class="col">
+            <!-- <span class="glyphicon glyphicon-earphone"></span> -->(515) 987-0552
+          </div>
+        </div>
       </div>
     </footer>
 
