--- a/index.html
+++ b/index.html
@@ -33,13 +33,6 @@
 
     <br><br><br><br><br><br>
 
-    <?php 
-      if (isset($_SESSION["success"])) {
-        $_SESSION["success"] = null;
-        echo('<div claass="alert alert-success" role="alert">Bags reservation sent!</div>');
-      }
-    ?>
-
 		<section id="">
 			<div class="container-fluid">
 				<div class="text-center">
@@ -163,6 +156,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"            crossorigin="anonymous"></script>
     -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
